app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  annotations:
    version: "0.0.1"
  labels:
    app: web
spec:
  selector:
    matchLabels:
      app: web
  replicas: 2
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: web
    spec:
      dnsPolicy: ClusterFirst
      containers:
        - name: app
          image: zwensman/simple-app:0.0.1
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 200m
              memory: 512Mi
      securityContext:
        runAsGroup: 101
        runAsUser: 101
        runAsNonRoot: true
      serviceAccountName: app
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - web
                topologyKey: kubernetes.io/hostname
