app/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  selector:
    app: web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
